Show Pre Release

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Innomax</title>
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/fonts.css">
-    <link rel="stylesheet" href="css/aos.css">
+    <link rel="stylesheet" href="css/aos.css" id="aos-css-file">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -20,10 +20,9 @@
             <img src="images/logos/logo-round.png" alt="">
         </div>
     </div>
-    <header class="header">
+    <header class="header header-home">
         <div class="header-left">
             <div class="header-left-background">
-
             </div>
             <div class="header-top-left">
                 <div class="container">
@@ -47,7 +46,8 @@
                 <div class="container">
                     <div class="header-hero-logo">
                         <h1 data-aos="fade-up" data-aos-duration="1000" data-aos-once="true">Innomax</h1>
-                        <span data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300" data-aos-once="true">Интерактивное оборудование</span>
+                        <span data-aos="fade-up" data-aos-duration="1000" data-aos-delay="300"
+                            data-aos-once="true">technology</span>
                     </div>
                 </div>
             </div>
@@ -112,7 +112,6 @@
     <header class="header header-pages header-fixed">
         <div class="header-left">
             <div class="header-left-background">
-
             </div>
             <div class="header-top-left">
                 <div class="container">
@@ -148,17 +147,63 @@
                                 <a href="#">UZ</a>
                                 <a href="#">EN</a>
                             </div>
+                            <button class="btn-bars">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+       
     </header>
+
+    <div class="header-mobile">
+        <div class="container">
+            <div class="header-search">
+                <div class="language-switcher">
+                    <a href="#" class="active">RU</a>
+                    <a href="#">UZ</a>
+                    <a href="#">EN</a>
+                </div>
+                <form action="">
+                    <input type="search" name="" id="" placeholder="Поиск..">
+                    <i class="fa fa-search"></i>
+                </form>
+                <button class="btn-bars">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+            <div class="header-menu">
+                <ul>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="catalog.html">Каталог</a></li>
+                    <li><a href="">Аренда</a></li>
+                    <li><a href="news.html">Новости</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
+                </ul>
+            </div>
+            <div class="header-contacts">
+                <a href="tel:+998909966000"><i class="fa fa-phone"></i> +998909966000</a>
+                <a href="mailto:info@innomax.uz "><i class="fa fa-envelope"></i> info@innomax.uz</a>
+                <div class="header-socials">
+                    <a href=""><i class="fa fa-instagram"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-telegram"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <section class="about">
         <div class="container">
             <div class="gray-line"></div>
-            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true"><span>информация</span> о компании <div></div>
+            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true">
+                <span>информация</span> о компании <div></div>
             </h3>
             <div class="about-intro-text" id="about-intro-text">
                 <p><span>OOO "INNOMAX TECHNOLOGY"</span> является прямым поставщиком информационных
@@ -171,8 +216,8 @@
                     Партнерство с зарубежными вендерами обеспечивает возможность предложения
                     уникального оборудования и ПО</p>
             </div>
-
-            <div class="about-round">
+ 
+             <div class="about-round">
                 <div class="about-round-card">
                     <img src="images/icons/about-round-1.png" alt="">
                     <h4>Все в наличии</h4>
@@ -206,20 +251,18 @@
                 <div class="about-logo">
                     <img src="images/logos/logo-round.png" alt="">
                 </div>
-
             </div>
-            <span class="about-text-company">
+           
+           <span class="about-text-company">
                 NOMAX
-            </span>
+            </span> 
             <div class="about-background">
                 <img src="images/backgrounds/uzbekistan-shapes.png" alt="">
-            </div>
+            </div> 
         </div>
-
-        <h2 class="about-numbers-title" id="innomax-in-numbers">INNOMAX в цифрах:</h2>
-        <section class="about-numbers"  data-aos="fade-down" data-aos-duration="1000" data-aos-once="true">
+         <h2 class="about-numbers-title" id="innomax-in-numbers">INNOMAX в цифрах:</h2>
+        <section class="about-numbers" data-aos="fade-down" data-aos-duration="1000" data-aos-once="true">
             <div class="container">
-
                 <div class="counter" id="counter">
                     <div class="counter-card">
                         <div class="counter-number">1200</div>
@@ -235,12 +278,13 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> 
     </section>
 
     <section class="advantages">
         <div class="container">
-            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true"><span>наши</span> преимущества <div></div>
+            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true">
+                <span>наши</span> преимущества <div></div>
             </h3>
             <div class="title-with-background-wrapper" data-aos="fade-right" data-aos-duration="1000">
                 <div class="title-with-background">
@@ -293,9 +337,11 @@
             INNO
         </span>
         <div class="container">
-            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true"><span>категории</span> товаров innomax <div></div>
+            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true">
+                <span>категории</span> товаров innomax <div></div>
             </h3>
-            <div class="title-with-background-wrapper" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300" data-aos-once="true">
+            <div class="title-with-background-wrapper" data-aos="fade-left" data-aos-duration="1000"
+                data-aos-delay="300" data-aos-once="true">
                 <div class="title-with-background">
                     <h3>Категории <span>товаров</span>:</h3>
                 </div>
@@ -305,7 +351,7 @@
                 <a href="" class="showcase-card right">
                     <div class="showcase-card-top">
                         <div class="showcase-card-description">
-                            <p>А также дополнительные материалы:</p>
+                            <p>Подробное описание</p>
                         </div>
                         <div class="showcase-card-img">
                             <img src="images/goods/digital-signage.png" alt="">
@@ -320,7 +366,7 @@
                 <a href="" class="showcase-card right">
                     <div class="showcase-card-top">
                         <div class="showcase-card-description">
-                            <p>А также дополнительные материалы:</p>
+                            <p>Подробное описание</p>
                         </div>
                         <div class="showcase-card-img">
                             <img src="images/goods/interaktivnie-sensornie-paneli.png" alt="">
@@ -335,7 +381,7 @@
                 <a href="" class="showcase-card right">
                     <div class="showcase-card-top">
                         <div class="showcase-card-description">
-                            <p>А также дополнительные материалы:</p>
+                            <p>Подробное описание</p>
                         </div>
                         <div class="showcase-card-img">
                             <img src="images/goods/elektronnie-sensornie-doski.png" alt="">
@@ -353,7 +399,7 @@
                 <a href="" class="showcase-card left">
                     <div class="showcase-card-top">
                         <div class="showcase-card-description">
-                            <p>А также дополнительные материалы:</p>
+                            <p>Подробное описание</p>
                         </div>
                         <div class="showcase-card-img">
                             <img src="images/goods/digital-signage.png" alt="">
@@ -368,7 +414,7 @@
                 <a href="" class="showcase-card left">
                     <div class="showcase-card-top">
                         <div class="showcase-card-description">
-                            <p>А также дополнительные материалы:</p>
+                            <p>Подробное описание</p>
                         </div>
                         <div class="showcase-card-img">
                             <img src="images/goods/monoblok-allinone.png" alt="">
@@ -383,7 +429,7 @@
                 <a href="" class="showcase-card left">
                     <div class="showcase-card-top">
                         <div class="showcase-card-description">
-                            <p>А также дополнительные материалы:</p>
+                            <p>Подробное описание</p>
                         </div>
                         <div class="showcase-card-img">
                             <img src="images/goods/sensornie-elektronnie-ocheredi.png" alt="">
@@ -404,16 +450,19 @@
             <div class="title-with-background">
                 <h3>Популярные товары</h3>
             </div>
-
         </div>
         <div class="container">
-            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true"><span>продукция</span> компании innomax <div></div>
+            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true">
+                <span>продукция</span> компании innomax <div></div>
             </h3>
             <div class="showcase-cards">
                 <a href="" class="showcase-card right">
                     <div class="showcase-card-top">
                         <div class="showcase-card-img">
                             <img src="images/goods/digital-signage.png" alt="">
+                        </div>
+                          <div class="showcase-card-description">
+                            <p>Подробное описание</p>
                         </div>
                     </div>
                     <div class="showcase-card-bottom">
@@ -431,6 +480,9 @@
                         <div class="showcase-card-img">
                             <img src="images/goods/interaktivnie-sensornie-paneli.png" alt="">
                         </div>
+                        <div class="showcase-card-description">
+                            <p>Подробное описание</p>
+                        </div>
                     </div>
                     <div class="showcase-card-bottom">
                         <div class="showcase-card-title">
@@ -447,6 +499,9 @@
                         <div class="showcase-card-img">
                             <img src="images/goods/elektronnie-sensornie-doski.png" alt="">
                         </div>
+                        <div class="showcase-card-description">
+                            <p>Подробное описание</p>
+                        </div>
                     </div>
                     <div class="showcase-card-bottom">
                         <div class="showcase-card-title">
@@ -458,13 +513,15 @@
                         </div>
                     </div>
                 </a>
-
             </div>
             <div class="showcase-cards">
                 <a href="" class="showcase-card left">
                     <div class="showcase-card-top">
                         <div class="showcase-card-img">
                             <img src="images/goods/digital-signage.png" alt="">
+                        </div>
+                        <div class="showcase-card-description">
+                            <p>Подробное описание</p>
                         </div>
                     </div>
                     <div class="showcase-card-bottom">
@@ -482,6 +539,9 @@
                         <div class="showcase-card-img">
                             <img src="images/goods/monoblok-allinone.png" alt="">
                         </div>
+                        <div class="showcase-card-description">
+                            <p>Подробное описание</p>
+                        </div>
                     </div>
                     <div class="showcase-card-bottom">
                         <div class="showcase-card-title">
@@ -497,6 +557,9 @@
                     <div class="showcase-card-top">
                         <div class="showcase-card-img">
                             <img src="images/goods/sensornie-elektronnie-ocheredi.png" alt="">
+                        </div>
+                        <div class="showcase-card-description">
+                            <p>Подробное описание</p>
                         </div>
                     </div>
                     <div class="showcase-card-bottom">
@@ -515,7 +578,8 @@
 
     <section class="clients" id="clients">
         <div class="container">
-            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true"><span>клиенты</span> innomax <div></div>
+            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-once="true">
+                <span>клиенты</span> innomax <div></div>
             </h3>
             <div class="clients-slider owl-carousel owl-theme">
                 <div><img src="images/logos/goodzone.png" alt=""></div>
@@ -538,9 +602,10 @@
                 <span>При заполнении формы заявки вы соглашаетесь на обработку ваших персональных данных*</span>
             </div>
         </div>
-        <div class="feedback-right">
+        <div class="feedback-right" id="particles-js">
             <div class="container">
-                <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300" data-aos-once="true"><span>обратная</span> связь <div></div>
+                <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300"
+                    data-aos-once="true"><span>обратная</span> связь <div></div>
                 </h3>
                 <h3>Удобнее поговорить?</h3>
                 <div class="feedback-right-card">
@@ -560,9 +625,9 @@
     </section>
     <section class="partners">
         <div class="container">
-            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300" data-aos-once="true"><span>партнеры</span> innomax <div></div>
+            <h3 class="section-title-right" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="300"
+                data-aos-once="true"><span>партнеры</span> innomax <div></div>
             </h3>
-
             <div class="partners-cards">
                 <div class="partners-card">
                     <img src="images/partners/bird.png" alt="">
@@ -587,7 +652,6 @@
                         <img src="images/logos/footer-logo.png" alt="">
                     </a>
                 </div>
-
                 <div class="footer-left-menu">
                     <ul>
                         <li><a href="">Сенсорные мониторы</a></li>
@@ -600,7 +664,7 @@
                 <div class="footer-copyright">
                     <div>
                         <span>Все права защищены</span>
-                        <h6>© Cophyright Innomax Technology 2019</h6>
+                        <h6>© Copyright Innomax Technology 2019</h6>
                     </div>
                 </div>
             </div>
@@ -648,15 +712,14 @@
                 </div>
             </div>
         </div>
-    </footer>
+    </footer> 
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/jquery.spincrement.min.js"></script>
     <script src="js/aos.js"></script>
     <script src="js/script.js"></script>
-    <script>
-        AOS.init();
-    </script>
 </body>
 
 </html>
