--- a/catalog.html
+++ b/catalog.html
@@ -6,20 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Innomax</title>
+    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-        <div class="preloader">
-                <div class="preloader-gif">
-                    <img src="images/logos/logo-round.png" alt="">
-                </div>
-            </div>
-    <header class="header header-pages">
+    <div class="preloader">
+        <div class="preloader-gif">
+            <img src="images/logos/logo-round.png" alt="">
+        </div>
+    </div>
+    <header class="header header-pages header-page">
         <div class="header-left">
             <div class="header-left-background">
 
@@ -68,50 +68,93 @@
         </div>
     </header>
     <header class="header header-pages header-fixed">
-            <div class="header-left">
-                <div class="header-left-background">
-    
-                </div>
-                <div class="header-top-left">
-                    <div class="container">
-                        <div class="header-logo">
-                            <a href="index.html">
-                                <img src="images/logos/innomax.png" alt="">
-                            </a>
-                        </div>
-                        <div class="header-menu">
-                            <ul>
-                                <li><a href="index.html">Главная</a></li>
-                                <li><a href="catalog.html">Каталог</a></li>
-                                <li><a href="">Аренда</a></li>
-                                <li><a href="news.html">Новости</a></li>
-                                <li><a href="contacts.html">Контакты</a></li>
-                            </ul>
-                        </div>
+        <div class="header-left">
+            <div class="header-left-background">
+            </div>
+            <div class="header-top-left">
+                <div class="container">
+                    <div class="header-logo">
+                        <a href="index.html">
+                            <img src="images/logos/innomax.png" alt="">
+                        </a>
+                    </div>
+                    <div class="header-menu">
+                        <ul>
+                            <li><a href="index.html">Главная</a></li>
+                            <li><a href="catalog.html">Каталог</a></li>
+                            <li><a href="">Аренда</a></li>
+                            <li><a href="news.html">Новости</a></li>
+                            <li><a href="contacts.html">Контакты</a></li>
+                        </ul>
                     </div>
                 </div>
-    
             </div>
-            <div class="header-right">
-                <div class="header-top-right">
-                    <div class="container">
-                        <div class="header-actions">
-                            <div class="header-search">
-                                <form action="">
-                                    <input type="search" name="" id="" placeholder="Поиск..">
-                                    <i class="fa fa-search"></i>
-                                </form>
-                                <div class="language-switcher">
-                                    <a href="#" class="active">RU</a>
-                                    <a href="#">UZ</a>
-                                    <a href="#">EN</a>
-                                </div>
+        </div>
+        <div class="header-right">
+            <div class="header-top-right">
+                <div class="container">
+                    <div class="header-actions">
+                        <div class="header-search">
+                            <form action="">
+                                <input type="search" name="" id="" placeholder="Поиск..">
+                                <i class="fa fa-search"></i>
+                            </form>
+                            <div class="language-switcher">
+                                <a href="#" class="active">RU</a>
+                                <a href="#">UZ</a>
+                                <a href="#">EN</a>
                             </div>
+                            <button class="btn-bars">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
-        </header>
+        </div>
+    </header>
+
+    <div class="header-mobile">
+        <div class="container">
+            <div class="header-search">
+                <div class="language-switcher">
+                    <a href="#" class="active">RU</a>
+                    <a href="#">UZ</a>
+                    <a href="#">EN</a>
+                </div>
+                <form action="">
+                    <input type="search" name="" id="" placeholder="Поиск..">
+                    <i class="fa fa-search"></i>
+                </form>
+                <button class="btn-bars">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+            <div class="header-menu">
+                <ul>
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="catalog.html">Каталог</a></li>
+                    <li><a href="">Аренда</a></li>
+                    <li><a href="news.html">Новости</a></li>
+                    <li><a href="contacts.html">Контакты</a></li>
+                </ul>
+
+            </div>
+            <div class="header-contacts">
+                <a href="tel:+998909966000"><i class="fa fa-phone"></i> +998909966000</a>
+                <a href="mailto:info@innomax.uz "><i class="fa fa-envelope"></i> info@innomax.uz</a>
+                <div class="header-socials">
+                    <a href=""><i class="fa fa-instagram"></i></a>
+                    <a href=""><i class="fa fa-facebook"></i></a>
+                    <a href=""><i class="fa fa-telegram"></i></a>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <section class="catalog-hero">
         <a href="">
@@ -126,8 +169,7 @@
                 <li><a href="index.html">Главная</a></li>
                 <li>Каталог</li>
             </ul>
-            <button type="button" class="catalog-button"><i class="fa fa-sliders" aria-hidden="true"></i>Подбор по
-                параметрам</button>
+            <button type="button" class="catalog-button"><i class="fa fa-folder" aria-hidden="true"></i>Категории</button>
             <div class="catalog-wrapper">
                 <div class="sidebar-layout"></div>
                 <div class="catalog-sidebar">
@@ -374,7 +416,11 @@
     </footer>
     <script src="js/jquery-3.3.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
+    <script src="js/particles.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/jquery.spincrement.min.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/simple-lightbox.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
